--- a/intro.css
+++ b/intro.css
@@ -27,9 +27,9 @@
   font-size: 18px;
   line-height: 25px;
   color: #bbccdd;
-  padding: 6px;
+  padding: 12px;
   border-radius: 5px 0 0 5px;
-  border: 1px solid white;
+  /* border: 1px solid white; */
 }
 
 .botaoTitulo {
@@ -43,6 +43,20 @@
   gap: 22px;
   background-color: #EE2211;
   border-radius: 0 5px 5px 0;
-  padding: 7px;
+  padding: 12px;
   text-transform: uppercase;
+}
+
+.botaoTitulo::after{
+  content: '';
+  display: block;
+  width: 15px;
+  height: 15px;
+  background: url('./surfbot-assets/seta.svg') no-repeat;
+  transition: .2s;
+  place-self: center;
+}
+
+.botaoTitulo:hover::after {
+  transform: translateX(-10px);
 }
