--- a/aulas.css
+++ b/aulas.css
@@ -62,14 +62,16 @@
   position: relative;
 }
 
-.card.um h2::before, .card.dois h2::before, .card.tres h2::before {
+.card.um h2::before,
+.card.dois h2::before,
+.card.tres h2::before {
   content: "";
   display: block;
   height: 38px;
   position: absolute;
 }
 
-.card.um h2::before{
+.card.um h2::before {
   width: 21px;
   top: -50px;
   left: 125px;
@@ -196,4 +198,32 @@
   height: 2px;
   background-color: #ff3726;
   top: 24px;
+}
+
+@media (max-width: 1100px) {
+  .aulasCards {
+    display: grid;
+  }
+}
+
+@media (max-width: 500px) {
+  .tituloEscuro {
+    font-size: 48px;
+    line-height: 54px;
+  }
+
+  .tituloEscuro::before {
+    width: 124px;
+  }
+
+  .card h2 {
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 18px;
+  }
+
+  .textoObservacao {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
