--- a/global.css
+++ b/global.css
@@ -13,7 +13,7 @@ a:active {
   text-decoration: none;
 }
 
-ul {
+li, ul {
   list-style: none;
   margin: 0px;
   padding: 0px;
@@ -32,7 +32,7 @@ h3 {
   margin: 0px;
 }
 
-input {
+input, textarea {
   all: unset;
 }
 
