--- a/menus.css
+++ b/menus.css
@@ -1,3 +1,7 @@
+.BGbarraFuncionamento{
+  background-color: #1188ee;
+}
+
 .barraFuncionamento {
   font-family: "Nunito";
   font-style: normal;
@@ -7,9 +11,17 @@
   color: white;
   background-color: #1188ee;
   padding: 5px 45px;
+  display: flex;
+  max-width: 1200px;
+  justify-content: start;
+  margin: 0 auto;
 }
 
 .BGmenu {
+  background-color: #17222d;
+}
+
+.menuStructure {
   display: flex;
   flex-wrap: wrap;
   background-color: #17222d;
@@ -18,6 +30,7 @@
   align-items: center;
   padding: 26px 45px;
   margin: 0 auto;
+  max-width: 1200px;
 }
 
 .menu {
@@ -64,4 +77,30 @@
 
 .redUnderline:hover::after{
   width: 0;
+}
+
+@media(max-width: 700px){
+  .menuStructure {
+    display: grid;
+    gap: 25px;
+    padding: 20px 45px;
+  }
+}
+
+@media(max-width: 500px){
+  .barraFuncionamento {
+    font-size: 10px;
+  }
+
+  .menu {
+    font-size: 14px;
+    line-height: 18px;
+    gap: 12px;
+  }
+  
+  .separador{
+    content: 'teste';
+    width: 3px;
+    height: 3px;
+  }
 }
