teste com imagens com qualidade menor

--- a/frase.css
+++ b/frase.css
@@ -1,5 +1,5 @@
 .BGfrase {
-  background: url("./surfbot-assets/foto-quote@2x.jpg");
+  background: url("./surfbot-assets/foto-quote.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
