--- a/intro.css
+++ b/intro.css
@@ -1,5 +1,5 @@
 .BGintro {
-  background: url("./surfbot-assets/bg-intro@2x.jpg");
+  background: url("./surfbot-assets/bg-intro.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
