ajuste no underline em aulas

--- a/aulas.css
+++ b/aulas.css
@@ -198,6 +198,11 @@
   height: 2px;
   background-color: #ff3726;
   top: 24px;
+  transition: 0.3s;
+}
+
+.underlineVermelho:hover::before {
+  width: 0;
 }
 
 @media (max-width: 1100px) {
