--- a/contato.css
+++ b/contato.css
@@ -10,15 +10,15 @@
   position: relative;
 }
 
-.BGcontato::before{
+.BGcontato::before {
   position: absolute;
-  content: '';
+  content: "";
   width: 2px;
   height: 477px;
   display: block;
   border: 0px solid;
   border-radius: 5%;
-  background-color: #EFF4F9;
+  background-color: #eff4f9;
   top: 173px;
   place-self: center;
 }
@@ -93,13 +93,13 @@
   transition: 0.2s;
 }
 
-.btContato:hover{
+.btContato:hover {
   color: white;
   cursor: pointer;
 }
 
-.btContato:hover::after{
-  transform: translateX(-7.5px)
+.btContato:hover::after {
+  transform: translateX(-7.5px);
 }
 
 .info {
@@ -132,28 +132,29 @@
   line-height: 19px;
 }
 
-.infoContato{
+.infoContato {
   position: relative;
 }
 
-.infoContato::before, .infoContato::after{
+.infoContato::before,
+.infoContato::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 220px;
   height: 2px;
   display: block;
   border: 0px solid;
   border-radius: 5%;
-  background-color: #EFF4F9;
+  background-color: #eff4f9;
   place-self: center;
 }
 
-.infoContato::before{
+.infoContato::before {
   top: -20px;
 }
 
-.infoContato::after{
-  bottom: -20px
+.infoContato::after {
+  bottom: -20px;
 }
 
 .btinfoEndereco {
@@ -168,26 +169,26 @@
   height: 12px;
   top: 3px;
   right: -25px;
-  transition: .2s;
+  transition: 0.2s;
 }
 
-.btinfoEndereco:hover::after{
+.btinfoEndereco:hover::after {
   transform: translateX(-7.5px);
 }
 
-.btinfoEndereco:hover{
-  color: #FF3726;
+.btinfoEndereco:hover {
+  color: #ff3726;
 }
 
 .infoContato a:hover {
-  color: #FF3726;
+  color: #ff3726;
 }
 
-.infoHorarioTitulo{
+.infoHorarioTitulo {
   position: relative;
 }
 
-.infoHorarioTitulo::before{
+.infoHorarioTitulo::before {
   content: "";
   position: absolute;
   background: url("./surfbot-assets/circleGreen.svg");
@@ -197,30 +198,30 @@
   left: -10px;
 }
 
-@media (max-width: 900px){
-  .BGcontato::before{
+@media (max-width: 900px) {
+  .BGcontato::before {
     height: 2px;
     width: 400px;
   }
 
-  .info{
+  .info {
     position: relative;
   }
 
-  .info::before{
+  .info::before {
     position: absolute;
-    content: '';
+    content: "";
     width: 400px;
     height: 2px;
     display: block;
     border: 0px solid;
     border-radius: 5%;
-    background-color: #EFF4F9;
+    background-color: #eff4f9;
     top: -20px;
     place-self: center;
   }
 
-  .BGcontato{
+  .BGcontato {
     grid-template-columns: 1fr;
     justify-content: center;
     margin: 0 auto;
@@ -245,8 +246,9 @@
   }
 }
 
-@media (max-width: 500px){
-  .info::before, .BGcontato::before{
+@media (max-width: 500px) {
+  .info::before,
+  .BGcontato::before {
     width: 200px;
   }
 
