--- a/global.css
+++ b/global.css
@@ -13,7 +13,8 @@ a:active {
   text-decoration: none;
 }
 
-li, ul {
+li,
+ul {
   list-style: none;
   margin: 0px;
   padding: 0px;
@@ -32,14 +33,15 @@ h3 {
   margin: 0px;
 }
 
-input, textarea {
+input,
+textarea {
   all: unset;
 }
 
 .detalheCinza {
-  color: #99AABB;
+  color: #99aabb;
 }
 
 .detalheAzul {
-  color: #1188EE;
+  color: #1188ee;
 }
