--- a/contato.css
+++ b/contato.css
@@ -45,16 +45,16 @@
   margin-bottom: 48px;
 }
 
-.contato label {
+/* .contato label {
   font-family: "Nunito";
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 25px;
   color: #445566;
-}
+} */
 
-.contato input,
+/* .contato input,
 .contato textarea {
   background: #eff4f9;
   box-shadow: 0px 2px 2px rgba(187, 204, 221, 0.4);
@@ -63,7 +63,7 @@
   line-height: 24px;
   padding: 15px;
   max-width: 360px;
-}
+} */
 
 .btContato {
   margin-top: 30px;
@@ -256,5 +256,9 @@
     font-size: 48px;
     padding-top: 45px;
     padding-bottom: 20px;
+  }
+
+  .info{
+    margin-top: 20px;
   }
 }
