--- a/global.css
+++ b/global.css
@@ -45,3 +45,22 @@ textarea {
 .detalheAzul {
   color: #1188ee;
 }
+
+label {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  color: #445566;
+}
+
+input, textarea {
+  background: #eff4f9;
+  box-shadow: 0px 2px 2px rgba(187, 204, 221, 0.4);
+  border-radius: 5px;
+  font-size: 20px;
+  line-height: 24px;
+  padding: 15px;
+  max-width: 360px;
+}
